Trying out some shizzle

--- a/jekyll/_includes/html-head.html
+++ b/jekyll/_includes/html-head.html
@@ -12,9 +12,9 @@
   <link rel="alternate" type="application/rss+xml" title="{{ project_title }}" href="{{ "/feed.xml" | prepend: project_root_url }}">
 
   <!-- Stylesheet -->
-  <link href="{{ project_root_url }}/jekyll-theme/styles/main.css" rel="stylesheet" type="text/css">
-  <link href="{{ project_root_url }}/jekyll-theme/styles/components/nav-drawer.css" rel="stylesheet" type="text/css">
+  <link href="{{ project_root_url }}/jekyll/styles/main.css" rel="stylesheet" type="text/css">
+  <link href="{{ project_root_url }}/jekyll/styles/components/nav-drawer.css" rel="stylesheet" type="text/css">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Comfortaa|Open+Sans" rel="stylesheet">
 </head>
