Adding some initial styling and downloads. Need to fix navigation next - then add content

--- a/jekyll/_includes/html-head.html
+++ b/jekyll/_includes/html-head.html
@@ -16,5 +16,5 @@
   <link href="{{ project_root_url }}/jekyll/styles/components/nav-drawer.css" rel="stylesheet" type="text/css">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Comfortaa|Open+Sans|Inconsolata" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Comfortaa:400,700|Open+Sans|Inconsolata" rel="stylesheet">
 </head>
