--- a/jekyll/_layouts/default.html
+++ b/jekyll/_layouts/default.html
@@ -11,7 +11,8 @@
     <main>
       {{ content }}
     </main>
-
+    
+    {% include footer.html %}
   </body>
 
   <script src="{{ project_root_url }}/jekyll/scripts/detabinator.js"></script>
