--- a/jekyll/styles/components/footer.css
+++ b/jekyll/styles/components/footer.css
@@ -1,40 +1,27 @@
-footer {
-  height: 120px;
-
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
-  justify-content: center;
-
-  background-color: rgb(33,33,33);
-  color: #757575;
-
-  padding: var(--vertical-padding) var(--horizontal-padding);
-
-  font-size: 12px;
-}
-
-footer a {
-  color: inherit;
-  text-decoration: none;
-}
-
-footer .social-btns, footer .footer-links {
+footer section {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
 
+  border-top-style: solid;
+  border-width: 1px
+}
+
+footer .downloads h6 {
+  margin: 0;
+}
+
+footer .downloads ul {
   list-style: none;
+  margin: 0;
   padding: 0;
-  margin: 14px 0;
 }
 
-footer .social-btn {
-  margin: 0 var(--horizontal-padding);
+footer .downloads ul li {
+  display: inline;
 }
 
-footer .social-btn > svg {
-  width: 24px;
-  height: 24px;
+footer .author {
+  margin: 0;
 }
