--- a/jekyll/_layouts/book-page.html
+++ b/jekyll/_layouts/book-page.html
@@ -11,7 +11,9 @@
     <main>
       {{ content }}
     </main>
-    
+
+    {% include page-navigation.html %}
+
     {% include footer.html %}
   </body>
 
