Attempting to get code inlining and syntax highlighting working

--- a/jekyll/styles/components/code-styles.css
+++ b/jekyll/styles/components/code-styles.css
@@ -71,3 +71,66 @@ pre code::before, pre code::after {
 
 .token.function {
   color: #009688;
+}
+
+.highlight code .hll { background-color: #ffffcc }
+.highlight code .c { color: #0099FF; font-style: italic } /* Comment */
+.highlight code .err { color: #AA0000; background-color: #FFAAAA } /* Error */
+.highlight code .k { color: #006699; font-weight: bold } /* Keyword */
+.highlight code .o { color: #555555 } /* Operator */
+.highlight code .cm { color: #0099FF; font-style: italic } /* Comment.Multiline */
+.highlight code .cp { color: #009999 } /* Comment.Preproc */
+.highlight code .c1 { color: #0099FF; font-style: italic } /* Comment.Single */
+.highlight code .cs { color: #0099FF; font-weight: bold; font-style: italic } /* Comment.Special */
+.highlight code .gd { background-color: #FFCCCC; border: 1px solid #CC0000 } /* Generic.Deleted */
+.highlight code .ge { font-style: italic } /* Generic.Emph */
+.highlight code .gr { color: #FF0000 } /* Generic.Error */
+.highlight code .gh { color: #003300; font-weight: bold } /* Generic.Heading */
+.highlight code .gi { background-color: #CCFFCC; border: 1px solid #00CC00 } /* Generic.Inserted */
+.highlight code .go { color: #AAAAAA } /* Generic.Output */
+.highlight code .gp { color: #000099; font-weight: bold } /* Generic.Prompt */
+.highlight code .gs { font-weight: bold } /* Generic.Strong */
+.highlight code .gu { color: #003300; font-weight: bold } /* Generic.Subheading */
+.highlight code .gt { color: #99CC66 } /* Generic.Traceback */
+.highlight code .kc { color: #006699; font-weight: bold } /* Keyword.Constant */
+.highlight code .kd { color: #006699; font-weight: bold } /* Keyword.Declaration */
+.highlight code .kn { color: #006699; font-weight: bold } /* Keyword.Namespace */
+.highlight code .kp { color: #006699 } /* Keyword.Pseudo */
+.highlight code .kr { color: #006699; font-weight: bold } /* Keyword.Reserved */
+.highlight code .kt { color: #007788; font-weight: bold } /* Keyword.Type */
+.highlight code .m { color: #FF6600 } /* Literal.Number */
+.highlight code .s { color: #CC3300 } /* Literal.String */
+.highlight code .na { color: #330099 } /* Name.Attribute */
+.highlight code .nb { color: #336666 } /* Name.Builtin */
+.highlight code .nc { color: #00AA88; font-weight: bold } /* Name.Class */
+.highlight code .no { color: #336600 } /* Name.Constant */
+.highlight code .nd { color: #9999FF } /* Name.Decorator */
+.highlight code .ni { color: #999999; font-weight: bold } /* Name.Entity */
+.highlight code .ne { color: #CC0000; font-weight: bold } /* Name.Exception */
+.highlight code .nf { color: #CC00FF } /* Name.Function */
+.highlight code .nl { color: #9999FF } /* Name.Label */
+.highlight code .nn { color: #00CCFF; font-weight: bold } /* Name.Namespace */
+.highlight code .nt { color: #330099; font-weight: bold } /* Name.Tag */
+.highlight code .nv { color: #003333 } /* Name.Variable */
+.highlight code .ow { color: #000000; font-weight: bold } /* Operator.Word */
+.highlight code .w { color: #bbbbbb } /* Text.Whitespace */
+.highlight code .mf { color: #FF6600 } /* Literal.Number.Float */
+.highlight code .mh { color: #FF6600 } /* Literal.Number.Hex */
+.highlight code .mi { color: #FF6600 } /* Literal.Number.Integer */
+.highlight code .mo { color: #FF6600 } /* Literal.Number.Oct */
+.highlight code .sb { color: #CC3300 } /* Literal.String.Backtick */
+.highlight code .sc { color: #CC3300 } /* Literal.String.Char */
+.highlight code .sd { color: #CC3300; font-style: italic } /* Literal.String.Doc */
+.highlight code .s2 { color: #CC3300 } /* Literal.String.Double */
+.highlight code .se { color: #CC3300; font-weight: bold } /* Literal.String.Escape */
+.highlight code .sh { color: #CC3300 } /* Literal.String.Heredoc */
+.highlight code .si { color: #AA0000 } /* Literal.String.Interpol */
+.highlight code .sx { color: #CC3300 } /* Literal.String.Other */
+.highlight code .sr { color: #33AAAA } /* Literal.String.Regex */
+.highlight code .s1 { color: #CC3300 } /* Literal.String.Single */
+.highlight code .ss { color: #FFCC33 } /* Literal.String.Symbol */
+.highlight code .bp { color: #336666 } /* Name.Builtin.Pseudo */
+.highlight code .vc { color: #003333 } /* Name.Variable.Class */
+.highlight code .vg { color: #003333 } /* Name.Variable.Global */
+.highlight code .vi { color: #003333 } /* Name.Variable.Instance */
+.highlight code .il { color: #FF6600 } /* Literal.Number.Integer.Long */
