--- a/src/jekyll/_layouts/book-page.html
+++ b/src/jekyll/_layouts/book-page.html
@@ -25,6 +25,11 @@
 
     ga('create', 'UA-77119321-4', 'auto');
     ga('send', 'pageview');
+  </script>
 
+  <script src="/anchor.min.js"></script>
+  <script>
+  anchors.options.visible = 'always';
+  anchors.add('main > h1,main > h2,main > h3,main > h4,main > h5,main > h6');
   </script>
 </html>
