Adding building site instructions and adding alpha tag

--- a/src/jekyll/styles/main.css
+++ b/src/jekyll/styles/main.css
@@ -264,3 +264,12 @@ main > h1:first-of-type {
 .page-nav-prev {
   left: 0;
 }
+
+.alpha-banner {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100px;
+  height: 100px;
+  background-image: url('/jekyll/images/alpha-banner.svg');
+}
