Minor tweaks and tidy up

--- a/src/jekyll/_includes/footer.html
+++ b/src/jekyll/_includes/footer.html
@@ -47,7 +47,8 @@
     </section>
 
     <section class="footer-bottom-row">
-      <p><a href="https://web-push-book.firebaseapp.com/">Web Push Book</a> by <a href="https://gauntface.com/">Matt Gaunt</a> is licensed under <a href="http://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0</a>.</p>
+      <p><a href="https://web-push-book.gauntface.com/">Web Push Book</a> by <a href="https://gauntface.com/">Matt Gaunt</a> is licensed under <a href="http://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0</a>.</p>
+      <p><a href="https://github.com/gauntface/web-push-book">Source Hosted on Github</a></p>
     </section>
   </div>
 </footer>
