--- a/src/jekyll/_includes/html-head.html
+++ b/src/jekyll/_includes/html-head.html
@@ -1,20 +1,18 @@
-{% include variables.html %}
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#222222">
 
-  <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ project_title | escape }}{% endif %}</title>
-  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.github.project_tagline }}{% endif %}">
+  <title>{{ page.title | escape }}</title>
+  <meta name="description" content="{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}">
 
   <!-- The docs server over HTTPS, but site.github.url points to HTTP resouce causing mixed content -->
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: project_root_url }}">
-  <link rel="alternate" type="application/rss+xml" title="{{ project_title }}" href="{{ "/feed.xml" | prepend: project_root_url }}">
+  <link rel="canonical" href="{{ site.live_domain }}{{ page.url | replace:'index.html','' }}">
 
   <!-- Stylesheet -->
-  <link href="{{ project_root_url }}/jekyll/styles/main.css" rel="stylesheet" type="text/css">
-  <link href="{{ project_root_url }}/jekyll/styles/components/nav-drawer.css" rel="stylesheet" type="text/css">
+  <link href="/jekyll/styles/main.css" rel="stylesheet" type="text/css">
+  <link href="/jekyll/styles/components/nav-drawer.css" rel="stylesheet" type="text/css">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Comfortaa:400,700|Open+Sans|Inconsolata" rel="stylesheet">
