Hopefully reducing file size of books

--- a/src/jekyll/_includes/footer.html
+++ b/src/jekyll/_includes/footer.html
@@ -42,7 +42,7 @@
         </ul>
       </div>
       <a href="https://gauntface.com">
-        <img class="gf-logo" src="/images/gf-logo.svg" />
+        <img class="gf-logo" src="/images/jekyll/gf-logo.svg" />
       </a>
     </section>
 
