Starting to add a better notification demo with styling

--- a/src/jekyll/_includes/html-head.html
+++ b/src/jekyll/_includes/html-head.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#222222">
 
-  <title>{{ page.title | escape }}</title>
+  <title>{{ page.title | escape }} | Web Push Book</title>
   <meta name="description" content="{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}">
 
   <!-- The docs server over HTTPS, but site.github.url points to HTTP resouce causing mixed content -->
