--- a/src/jekyll/_includes/page-navigation.html
+++ b/src/jekyll/_includes/page-navigation.html
@@ -9,9 +9,9 @@
 {% endfor %}
 
 {% if prev %}
-<a class="page-nav-prev" href="{{prev.url}}" title="Previous Page"><img src="{{site.baseurl}}/images/jekyll/left-arrow.svg" alt="Previous Page Arrow" /></a>
+<a class="page-nav-prev" href="{{prev.url}}" title="Previous Page"><img src="/images/jekyll/left-arrow.svg" alt="Previous Page Arrow" /></a>
 {% endif %}
 
 {% if next %}
-<a class="page-nav-next" href="{{next.url}}" title="Next Page"><img src="{{site.baseurl}}/images/jekyll/right-arrow.svg" alt="Next Page Arrow" /></a>
+<a class="page-nav-next" href="{{next.url}}" title="Next Page"><img src="/images/jekyll/right-arrow.svg" alt="Next Page Arrow" /></a>
 {% endif %}
