--- a/src/jekyll/_includes/footer.html
+++ b/src/jekyll/_includes/footer.html
@@ -26,17 +26,17 @@
         <ul>
           {% if pdfDownload %}
           <li>
-            <a href="{{site.baseurl}}{{ pdfDownload }}">PDF</a>
+            <a href="{{ pdfDownload }}">PDF</a>
           </li>
           {% endif %}
           {% if mobiDownload %}
           <li>
-            <a href="{{site.baseurl}}{{ mobiDownload }}">mobi</a>
+            <a href="{{ mobiDownload }}">mobi</a>
           </li>
           {% endif %}
           {% if epubDownload %}
           <li>
-            <a href="{{site.baseurl}}{{ epubDownload }}">epub</a>
+            <a href="{{ epubDownload }}">epub</a>
           </li>
           {% endif %}
         </ul>
