--- a/src/demos/web-app/styles/demo.css
+++ b/src/demos/web-app/styles/demo.css
@@ -1,6 +1,8 @@
 /* H/T http://callmenick.com/post/css-toggle-switch-examples */
 .toggle-switch {
   display: inline-block;
+  width: 60px;
+  height: 34px;
 }
 
 .toggle-switch input {
@@ -58,4 +60,15 @@
 }
 .toggle-switch input:disabled + label {
   opacity: 0.4;
+}
+
+.message {
+  display: inline-block;
+  height: 34px;
+  line-height: 34px;
+  vertical-align: top;
+}
+
+td.endpoint {
+  word-break: break-all;
 }
