--- a/src/jekyll/styles/components/code-styles.css
+++ b/src/jekyll/styles/components/code-styles.css
@@ -86,7 +86,7 @@ pre code::before, pre code::after {
 .highlight code .p { color: var(--code-style-darker-grey) }
 .highlight code .hll { background-color: #ffffcc }
 .highlight code .c { color: var(--code-style-grey); font-style: italic } /* Comment */
-.highlight code .err { color: #AA0000; background-color: #FFAAAA } /* Error */
+.highlight code .err { color: #AA0000; } /* Error */
 .highlight code .k { color: var(--code-style-lite-blue); font-weight: bold } /* Keyword */
 .highlight code .o { color: #555555 } /* Operator */
 .highlight code .cm { color: #0099FF; font-style: italic } /* Comment.Multiline */
