--- a/src/jekyll/_includes/footer.html
+++ b/src/jekyll/_includes/footer.html
@@ -31,7 +31,7 @@
           {% endif %}
           {% if mobiDownload %}
           <li>
-            <a href="{{ mobiDownload }}">mobi</a>
+            <a href="{{ mobiDownload }}">Kindle (mobi)</a>
           </li>
           {% endif %}
           {% if epubDownload %}
