--- a/webfundamentals/front-matter.tmpl
+++ b/webfundamentals/front-matter.tmpl
@@ -1,7 +1,7 @@
 project_path: /web/_project.yaml
 book_path: /web/fundamentals/_book.yaml
 
-{# wf_updated_on: {{updateOnDate}} #}
+{# wf_updated_on: {{updatedOnDate}} #}
 {# wf_published_on: 2016-06-30 #}
 
 # {{title}} {: .page-title }
