Switching to new style includes

--- a/layouts/shortcodes/inline-file.html
+++ b/layouts/shortcodes/inline-file.html
@@ -1,10 +1,10 @@
-{{ $contents := readFile (.Get 0) }}
+{{- $contents := readFile (.Get 0) -}}
 {{- if gt (len .Params) 1 -}}
   {{- $r := printf "/\\*\\*\\*\\* START %s \\*\\*\\*\\*\\/[\\n]?((?:.|\\n)*)\\/\\*\\*\\*\\* END %s \\*\\*\\*\\*\\/[\\n]?" (.Get 1) (.Get 1) -}}
   {{- $m := findRE $r $contents -}}
   {{- $contents = index $m 0 -}}
-  {{- $s := printf "/\\*\\*\\*\\* ((START)|(END)) %s \\*\\*\\*\\*\\/[\\n]?" (.Get 1) -}}
-  {{- replaceRE $s "" $contents -}}
-{{- else -}}
-  {{ $contents }}
+  {{- $s := ".*/\\*\\*\\*\\* ((START)|(END)) (.*) \\*\\*\\*\\*\\/[\\n]" -}}
+  {{- $contents = replaceRE $s "" $contents -}}
 {{- end -}}
+{{- $contents = trim $contents "\n" -}}
+{{ $contents }}
